feat(src/components/logo): adds logo

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18"
