feat(src/app): adds button component

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-variants": "^0.1.18"
   },
   "devDependencies": {
     "@types/node": "^20",
