--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-variants": "^0.1.18"
+    "tailwind-variants": "^0.1.18",
+    "typeit-react": "^2.6.4"
   },
   "devDependencies": {
     "@types/node": "^20",
