feat(public/images): adds some images

--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "swiper": "^11.0.4",
     "tailwind-variants": "^0.1.18",
-    "typeit-react": "^2.6.4"
+    "typeit-react": "2.6.4"
   },
   "devDependencies": {
     "@types/node": "^20",
