--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.0.4",
     "tailwind-variants": "^0.1.18",
-    "typeit-react": "2.6.4"
+    "typeit-react": "2.6.4",
+    "unform": "^1.2.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
