--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
-    "next": "14.0.2",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.0.4",
