--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@unform/web": "^2.1.6",
     "next-auth": "^4.24.5",
     "react": "^18",
+    "react-canvas-confetti": "^1.4.0",
     "react-dom": "^18",
     "swiper": "^11.0.4",
     "tailwind-variants": "^0.1.18",
