--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-canvas-confetti": "^1.4.0",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.5.3",
     "swiper": "^11.0.4",
     "tailwind-variants": "^0.1.18",
     "typeit-react": "2.6.4",
